--- a/jenkins-docker-compose.yml
+++ b/jenkins-docker-compose.yml
@@ -3,8 +3,8 @@ services:
   jenkins:
     image: jenkins/jenkins:latest
     restart: always
-#   environment:
-#      JENKINS_JAVA_OPTIONS: "-Djava.awt.headless=true -Dmail.smtp.starttls.enable=true"
+    environment:
+      JENKINS_JAVA_OPTIONS: "-Djava.awt.headless=true -Dmail.smtp.starttls.enable=true"
     ports:
     - 8888:8080
     volumes:
